fix: swagger url 수정